--- a/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/Listagem_Admins.cshtml
@@ -128,7 +128,7 @@
                             <td>@listagemadmins.nivacesso</td>
                             <td>
                                 <div class="options">
-                                    <form method="post" action="#editar">
+                                    <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/edit_list_user.cshtml">
                                         <input type="hidden" id="userid" name="userid" value="@listagemadmins.cpf" />
                                         <button class="btn_edit">
                                             <span class="glyphicon glyphicon-edit"></span>
