--- a/Projeto_Final/HTMLCSS/Listagem/edit_listagem/editing_list_user.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/edit_listagem/editing_list_user.cshtml
@@ -1,12 +1,6 @@
 ﻿@using Projeto_Final.CSHARP;
 @{
     BancoDeDados.DBConnect();
-    HttpCookie cookiecpf = Request.Cookies["UserCpf"];
-    HttpCookie cookie = Request.Cookies["UserLogin"];
-
-    pessoa usuario = new pessoa();
-
-    usuario.cpf = cookiecpf.Value.ToString();
 
     string cpf = "";
     string nome = "";
@@ -14,6 +8,12 @@
     string telefone = "";
     string nivelacesso = "";
     string senha = "";
+
+    pessoa usuario = new pessoa();
+
+    usuario.cpf = Request.Form["userid"];
+
+
 
     List<pessoa> lista = Funcoes.Info_User(usuario);
     foreach (pessoa listagempessoa in lista)
@@ -27,13 +27,17 @@
     }
 
     pessoa Pessoa = new pessoa();
-    Pessoa.cpf = Request.Form["userid"];
+    Pessoa.cpf = Request.Form["cpfid"];
     Pessoa.nome = Request.Form["nomeid"];
     Pessoa.email = Request.Form["emailid"];
     Pessoa.telefone = Request.Form["telid"];
     Pessoa.senha = Request.Form["senhaid2"];
-    Pessoa.nivacesso = nivelacesso;
+    Pessoa.nivacesso = Request.Form["nivacesso"];
 
+    if (Pessoa.cpf == "")
+    {
+        Pessoa.cpf = cpf;
+    }
     if (Pessoa.nome == "")
     {
         Pessoa.nome = nome;
@@ -50,14 +54,17 @@
     {
         Pessoa.senha = senha;
     }
-
+    if (Pessoa.nivacesso == "")
+    {
+        Pessoa.nivacesso = nivelacesso;
+    }
     Funcoes.edituser(Pessoa);
 
 
 
     <text>
         <script>
-            window.location.href = "/HTMLTEMP/Checagem/check_userarea.cshtml";
+            window.location.href = "/HTMLCSS/Listagem/Listagem_Alunos.cshtml";
         </script>
     </text>
 
