--- a/Projeto_Final/HTMLCSS/CSS/registro.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro.css
@@ -72,3 +72,20 @@ input[type=submit]:hover{
     background-color: #b3ddd9;
 }
 
+.registro a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #41436a;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+}
+
+    .registro a :hover {
+        color: #15cdca;
+    }
