--- a/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_matriculas.cshtml
@@ -119,8 +119,8 @@
                             <td>@matriculados.extradois</td>
                             <td>
                                 <div class="options">
-                                    <form method="post" action="#editar">
-                                        <input type="hidden" id="userid" name="userid" value="@matriculados.idmatricula" />
+                                    <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/edit_list_matricula.cshtml">
+                                        <input type="hidden" id="matid" name="matid" value="@matriculados.idmatricula" />
                                         <button class="btn_edit">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </button>
