--- a/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_sala.cshtml
@@ -115,7 +115,7 @@
                                 <td>
                                     <div class="options">
                                         <form method="post" action="~/HTMLCSS/Listagem/remove/delete_sala.cshtml">
-                                            <input type="text" style="visibility:hidden" id="salaid" name="salaid" value="@salas.idsala" />
+                                            <input type="hidden" id="salaid" name="salaid" value="@salas.idsala" />
                                             <button>
                                                 <span class="glyphicon glyphicon-remove-circle"></span> 
                                             </button>
