--- a/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_setores.cshtml
@@ -114,7 +114,7 @@
                                 <td>
                                     <div class="options">
                                         <form method="post" action="~/HTMLCSS/Listagem/remove/delete_setor.cshtml">
-                                            <input type="text" style="visibility:hidden" id="setorid" name="setorid" value="@setores.idsetor" />
+                                            <input type="hidden" id="setorid" name="setorid" value="@setores.idsetor" />
                                             <button>
                                                 <span class="glyphicon glyphicon-remove-circle"></span>
                                             </button>
