--- a/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/listagem_turma.cshtml
@@ -117,26 +117,22 @@
                             <td>@turmas.idturma</td>
                             <td>@turmas.nome_curso</td>
                             <td>@turmas.turno</td>
-                            <td>@turmas.idsala</td>
                             <td>@turmas.idprofe</td>
-                            <td>
-                                <div class="options">
-                                    <form method="post" action="#editar">
-                                        <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
+                            <td>@turmas.idsala</td>
+                            <td><div class="options">
+                                    <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/edit_list_turma.cshtml">
+                                        <input type="hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
                                         <button class="btn_edit">
                                             <span class="glyphicon glyphicon-edit"></span> 
                                         </button>
                                     </form>
-
                                     <form method="post" action="~/HTMLCSS/Listagem/remove/delete_turma.cshtml">
-                                        <input type="text" style="visibility:hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
-
+                                        <input type="hidden" id="turmaid" name="turmaid" value="@turmas.idturma" />
                                         <button class="btn_remove">
                                             <span class="glyphicon glyphicon-remove-circle"></span>
                                         </button>
                                     </form>
-                                </div>
-                            </td>
+                                </div></td>
                         </tr>
                             
                         }
