--- a/Projeto_Final/HTMLCSS/CSS/registro_turma.css
+++ b/Projeto_Final/HTMLCSS/CSS/registro_turma.css
@@ -60,6 +60,23 @@ select {
     border-radius: 5px;
 }
 
+.registro a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #41436a;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+}
+
+    .registro a:hover {
+        color: #15cdca;
+    }
 
 
 
