--- a/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_matricula.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_matricula.cshtml
@@ -1,10 +1,9 @@
 ﻿@using Projeto_Final.CSHARP;
 @{
     BancoDeDados.DBConnect();
+    matricula mat = new matricula();
+    mat.idmatricula = Request.Form["matid"];
 
-    pessoa usuario = new pessoa();
-
-    usuario.cpf = Request.Form["userid"];
 }
 
 <!DOCTYPE html>
@@ -19,7 +18,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
     <!--CSS-->
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/matricula.css" />
 
     <title>CENAI</title>
 </head>
@@ -42,7 +41,7 @@
             <!--MATRICULA OPCOES-->
             <div class="dropdown-container">
                 <a href="~/HTMLCSS/Registro/matricula.cshtml">Fazer Matricula</a>
-                <a href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
+                <a class="active" href="~/HTMLCSS/Listagem/listagem_matriculas.cshtml">Alunos Matriculados</a>
             </div>
             <!--REGISTRO-->
             <button class="dropdown-btn">
@@ -52,7 +51,7 @@
             </button>
             <!--REGISTRO OPCOES-->
             <div class="dropdown-container">
-                <a  href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
             </div>
@@ -64,7 +63,7 @@
             </button>
             <!--LISTAGEM OPCOES-->
             <div class="dropdown-container">
-                <a class="active"  href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
                 <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
@@ -100,57 +99,44 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/Listagem/edit_listagem/editing_list_user.cshtml">
+                <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/editing_list_matricula.cshtml">
                     <div class="container">
+                        
                         <div class="registro">
-                            <input type="hidden" name="userid"id="userid" value="@usuario.cpf" />
-                            @{List<pessoa> lista = Funcoes.Info_User(usuario);}
-                            @foreach (pessoa listagempessoa in lista)
-                            {
+                            <input type="hidden" name="matid" id="matid" value="@mat.idmatricula" />
+                            <center>
+                                @{List<matricula> lista_mat = Funcoes.listing_mat(mat);}
+                                @foreach (matricula matriculados in lista_mat)
+                                {
+                                    <h6>EDIÇÃO DA MATRICULA!</h6>
+                                    <!--ALUNO-->
+                                    <select name="idaluno" id="idaluno">
+                                        <option value="1" disabled selected>@matriculados.extraum</option>
+                                        @{List<pessoa> lista_alunos = Funcoes.Listagem_Alunos(); }
+                                        @foreach (pessoa listagemalunos in lista_alunos)
+                                        {
+                                            <option value="@listagemalunos.cpf">@listagemalunos.nome</option>
+                                        }
+                                    </select>
+                                    <!--TURMA-->
+                                    <select name="idturma" id="idturma">
+                                        <option value="1" disabled selected>@matriculados.extradois</option>
+                                        @{List<turma> lista = Funcoes.Listagem_Turmas();}
+                                        @foreach (turma turmas in lista)
+                                        {
+                                            <option value="@turmas.idturma">@turmas.nome_curso</option>
 
-
-                                <h6>
-                                    EDIÇÃO DO USUARIO!
-                                </h6>
-                                <!--NIVEL DE ACESSO-->
-                                <div class="nivel">
-
-                                    <select name="nivacesso" id="nivacesso">
-                                        <option value="1" selected disabled>@listagempessoa.nivacesso</option>
-                                        <option value="usuario">Usuario</option>
-                                        <option value="professor">Professor</option>
-                                        <option value="administrador">Administrador</option>
-                                    </select><br />
-
-                                </div>
-                                <!--NOME-->
-                                <input type="text" name="nomeid" id="nomeid" class="campo_nome"
-                                       placeholder="@listagempessoa.nome" minlenght="3" maxlength="100" /><br />
-                                <!--CPF-->
-                                <input type="text" name="cpfid" id="cpfid" class="campo_cpf"
-                                       placeholder="@listagempessoa.cpf" maxlength="11" /><br />
-                                <!--EMAIL-->
-                                <input type="email" name="emailid" id="emailid" class="campo_email"
-                                       placeholder="@listagempessoa.email" maxlength="100" /><br />
-                                <!--TELEFONE-->
-                                <input type="tel" name="telid" class="campo_tel"
-                                       placeholder="@listagempessoa.telefone" minxlength="11"
-                                       maxlength="14" /><br />
-                                <!--SENHA-->
-                                <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
-                                       placeholder="nova senha" minlength="6" maxlength="16" /><br />
-                                <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
-                                       placeholder="verifique nova senha" minlength="6" maxlength="16" /><br />
-
-                                <!--ENVIAR-->
-                                <input type="submit" placeholder="EDITAR" /><br />
-                            }
-
+                                        }
+                                    </select>
+                                    <!--ENVIAR-->
+                                    <input type="submit" placeholder="EDITAR" /><br />
+                                }
+                            </center>
                             <a class="cnclbtn" onclick="history.go(-1);">
                                 <span class="material-symbols-outlined">arrow_back</span>
                             </a>
-
                         </div>
+
                     </div>
                 </form>
             </div>
