--- a/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_turma.cshtml
+++ b/Projeto_Final/HTMLCSS/Listagem/edit_listagem/edit_list_turma.cshtml
@@ -1,10 +1,8 @@
 ﻿@using Projeto_Final.CSHARP;
 @{
     BancoDeDados.DBConnect();
-
-    pessoa usuario = new pessoa();
-
-    usuario.cpf = Request.Form["userid"];
+    turma tma = new turma();
+    tma.idturma = Request.Form["turmaid"];
 }
 
 <!DOCTYPE html>
@@ -19,7 +17,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,300,1,-25" />
     <!--CSS-->
     <link rel="stylesheet" href="~/HTMLCSS/CSS/sidebar.css" />
-    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro.css" />
+    <link rel="stylesheet" href="~/HTMLCSS/CSS/registro_turma.css" />
 
     <title>CENAI</title>
 </head>
@@ -52,7 +50,7 @@
             </button>
             <!--REGISTRO OPCOES-->
             <div class="dropdown-container">
-                <a  href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
+                <a href="~/HTMLTEMP/Checagem/check_registro.cshtml">Usuarios</a>
                 <a href="~/HTMLCSS/Registro/registro_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Registro/registro_sala_setor.cshtml">Salas/Setores</a>
             </div>
@@ -64,8 +62,8 @@
             </button>
             <!--LISTAGEM OPCOES-->
             <div class="dropdown-container">
-                <a class="active"  href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
-                <a href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
+                <a href="~/HTMLCSS/Listagem/Listagem_Alunos">Usuarios</a>
+                <a class="active" href="~/HTMLCSS/Listagem/listagem_turma.cshtml">Turmas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_sala.cshtml">Salas</a>
                 <a href="~/HTMLCSS/Listagem/listagem_setores.cshtml">Setores</a>
             </div>
@@ -100,57 +98,58 @@
     </nav>
         <main>
             <div class="content">
-                <form method="post" onsubmit="return checkPassword(this);" action="~/HTMLCSS/Listagem/edit_listagem/editing_list_user.cshtml">
+                <form method="post" action="~/HTMLCSS/Listagem/edit_listagem/editing_list_turma.cshtml">
                     <div class="container">
+                        
                         <div class="registro">
-                            <input type="hidden" name="userid"id="userid" value="@usuario.cpf" />
-                            @{List<pessoa> lista = Funcoes.Info_User(usuario);}
-                            @foreach (pessoa listagempessoa in lista)
-                            {
+                            <center>
+                                <input type="hidden" name="turmaid" id="turmaid" value="@tma.idturma" />
+                                @{List<turma> listaturmas = Funcoes.listing_turma(tma);}
+                                @foreach (turma turmas in listaturmas)
+                                {
+                                    <h6>EDIÇÃO DE TURMA!</h6>
+                                    <!--NOME-->
+                                    <input type="text" name="nomeid" id="nomeid" class="campo_nome"
+                                           placeholder="@turmas.nome_curso" minlenght="3" maxlength="50"/><br />
+                                    <!--TURNO-->
+                                    <fieldset>
+                                        <legend>Turno (@turmas.turno)</legend>
+                                        <span class="material-symbols-outlined">clear_day</span>
+                                        <input type="radio" id="dia" name="turno" value="matutino" > MATUTINO<br />
+                                        <span class="material-symbols-outlined">wb_twilight</span>
+                                        <input type="radio" id="tarde" name="turno" value="vespertino" > VESPERTINO<br />
+                                        <span class="material-symbols-outlined">nightlight</span>
+                                        <input type="radio" id="noite" name="turno" value="noturno" > NOTURNO<br />
+                                    </fieldset>
+                                    <!--SALA-->
+                                    <select name="sala" id="sala">
+                                        <option value="1" selected disabled>Sala @turmas.idsala</option>
+                                        @{List<sala> lista = Funcoes.Listagem_Sala();}
+                                        @foreach (sala salas in lista)
+                                        {
+                                            <option value="@salas.idsala">Sala @salas.numsala</option>
+                                        }
+                                    </select>
+                                    <!--PROFESSOR-->
+                                    <select name="professor" id="professor">
+                                        <option value="1" selected disabled>Prof. @turmas.idprofe</option>
+                                        @{List<pessoa> listaprofe = Funcoes.Listagem_Professor();}
+                                        @foreach (pessoa listagemprofe in listaprofe)
+                                        {
+                                            <option value="@listagemprofe.cpf">@listagemprofe.nome</option>
+                                        }
+                                    </select>
 
-
-                                <h6>
-                                    EDIÇÃO DO USUARIO!
-                                </h6>
-                                <!--NIVEL DE ACESSO-->
-                                <div class="nivel">
-
-                                    <select name="nivacesso" id="nivacesso">
-                                        <option value="1" selected disabled>@listagempessoa.nivacesso</option>
-                                        <option value="usuario">Usuario</option>
-                                        <option value="professor">Professor</option>
-                                        <option value="administrador">Administrador</option>
-                                    </select><br />
-
-                                </div>
-                                <!--NOME-->
-                                <input type="text" name="nomeid" id="nomeid" class="campo_nome"
-                                       placeholder="@listagempessoa.nome" minlenght="3" maxlength="100" /><br />
-                                <!--CPF-->
-                                <input type="text" name="cpfid" id="cpfid" class="campo_cpf"
-                                       placeholder="@listagempessoa.cpf" maxlength="11" /><br />
-                                <!--EMAIL-->
-                                <input type="email" name="emailid" id="emailid" class="campo_email"
-                                       placeholder="@listagempessoa.email" maxlength="100" /><br />
-                                <!--TELEFONE-->
-                                <input type="tel" name="telid" class="campo_tel"
-                                       placeholder="@listagempessoa.telefone" minxlength="11"
-                                       maxlength="14" /><br />
-                                <!--SENHA-->
-                                <input type="password" id="senhaid1" name="senhaid1" class="campo_senha1"
-                                       placeholder="nova senha" minlength="6" maxlength="16" /><br />
-                                <input type="password" id="senhaid2" name="senhaid2" class="campo_senha2"
-                                       placeholder="verifique nova senha" minlength="6" maxlength="16" /><br />
-
-                                <!--ENVIAR-->
-                                <input type="submit" placeholder="EDITAR" /><br />
-                            }
-
+                                    <!--ENVIAR-->
+                                    <input type="submit" placeholder="EDITAR" /><br />
+                                }
+                            </center>
                             <a class="cnclbtn" onclick="history.go(-1);">
                                 <span class="material-symbols-outlined">arrow_back</span>
                             </a>
-
                         </div>
+                        
+                        
                     </div>
                 </form>
             </div>
