--- a/Projeto_Final/HTMLCSS/Provas/editing_notas.cshtml
+++ b/Projeto_Final/HTMLCSS/Provas/editing_notas.cshtml
@@ -5,17 +5,16 @@
     prova pva = new prova();
 
     pva.idprova = Request.Form["provaid"];
-
     string idprova = "";
     string nota = "";
-    string idmatricula = "";
+    string matricula = "" ;
 
     List<prova> lista = Funcoes.Listing_Notas(pva);
     foreach (prova prova_atual in lista)
     {
-        idprova = pva.idprova;
-        nota = pva.nota;
-        idmatricula = pva.extra;
+        idprova = prova_atual.idprova;
+        nota = prova_atual.nota;
+        matricula = prova_atual.idmatricula;
     }
 
         prova Prova = new prova();
@@ -23,20 +22,15 @@
         Prova.idprova = Request.Form["provaid"];
         Prova.nota = Request.Form["notaid"];
         Prova.idmatricula = Request.Form["idmatricula"];
-
-        if (Prova.idprova == null)
-        {
-            Prova.idprova = idprova;
-        }
-        if (Prova.nota == null)
+    
+        if (Prova.nota == "")
         {
             Prova.nota = nota;
         }
         if (Prova.idmatricula == null)
         {
-            Prova.idmatricula = idmatricula;
+            Prova.idmatricula = matricula;
         }
-        <p>a</p>
         Funcoes.editnota(Prova);
 
         <text>
